# MoRoTA

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: modules_100_235.csv  modules_100_244.csv  robot_setup_norm.yml  robot_setup_soft.yml  tasks_circle.csv  toy_scenario.yml
configs/20251229/: l150_gp100_ga100_p10_90_modules_100_154_hard_tasks_circle.yml  l150_gp100_ga100_p10_90_modules_100_154_hard_tasks_sobol.yml  (+238 more)
configs/20251229-1/: l150_gp250_ga250_p50_50_modules_100_154_hard_tasks_circle.yml  l150_gp250_ga250_p50_50_modules_100_154_hard_tasks_sobol.yml  l150_gp250_ga250_p50_50_modules_100_154_norm_tasks_circle.yml  l150_gp250_ga250_p50_50_modules_100_154_norm_tasks_sobol.yml  l150_gp250_ga250_p50_50_modules_100_244_hard_tasks_circle.yml  l150_gp250_ga250_p50_50_modules_100_244_hard_tasks_sobol.yml  l150_gp250_ga250_p50_50_modules_100_244_norm_tasks_circle.yml  l150_gp250_ga250_p50_50_modules_100_244_norm_tasks_sobol.yml  l300_gp250_ga250_p50_50_modules_100_154_hard_tasks_circle.yml  l300_gp250_ga250_p50_50_modules_100_154_hard_tasks_sobol.yml  l300_gp250_ga250_p50_50_modules_100_154_norm_tasks_circle.yml  l300_gp250_ga250_p50_50_modules_100_154_norm_tasks_sobol.yml  l300_gp250_ga250_p50_50_modules_100_244_hard_tasks_circle.yml  l300_gp250_ga250_p50_50_modules_100_244_hard_tasks_sobol.yml  l300_gp250_ga250_p50_50_modules_100_244_norm_tasks_circle.yml  l300_gp250_ga250_p50_50_modules_100_244_norm_tasks_sobol.yml  summary_makespan.csv
scripts/: app.py  get_file_tree.py  read.py  run.py  run_all.sh  sample.sh  test_config_loader.py  viz.py
(+166 files in other folders)
